cambios menu inicio

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="indice.css">
+	<meta charset="UTF-8"> 
+	<link rel="stylesheet" type="text/css" href="css inicio/estilo.css"> 
+	<link href="https://fonts.googleapis.com/css?family=Qwigley|Yesteryear" rel="stylesheet">
 	<title>Indice</title>
 </head>
 <body>
-	<h2>Indice trabajo "La bandera"</h2>
+	<h2 id="titulo">Trabajo: "Positioning 2"</h2>
+	<h3 class="indice">Indice</h3>
 	<ul>
-		<li><a href="parte1/index.html">Parte 1</a></li>
-		<li><a href="parte2/index.html">Parte 2</a></li>
+		<li><a href="parte1/index.html" class="caja">Parte 1</a></li>
+		<li><a href="parte2/index.html" class="caja">Parte 2</a></li>
 	</ul>
 </body>
 </html>
