--- a/parte1/index.html
+++ b/parte1/index.html
@@ -11,9 +11,6 @@
 			<div class="amarillo"></div>
 		</div>
 	</div>
-	<button>
-		<a href="../index.html">Indice</a>
-	</button>
-	
+	<a href="../index.html" class="boton">Indice</a>
 </body>
 </html>
