--- a/parte2/index.html
+++ b/parte2/index.html
@@ -11,9 +11,6 @@
 		<div class="negro"></div>
 	</div>
 	<div class="negro"></div>
-	<button>
-		<a href="../index.html">Indice</a>
-	</button>
-	
+	<a href="../index.html" class="boton">Indice</a>
 </body>
 </html>
